examples/errors/oop_invalid_super.vut
class Student() {
    fn call_parent() {
        super._init()
    }
}

let s = Student()
s.call_parent()
